Add first commit

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 roles_path = roles
-jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
+jinja2_extensions =  jinja2.ext.loopcontrols,jinja2.ext.do
+duplicate_dict_key=error
 deprecation_warnings = False
 forks = 12
 #collections_paths = ./ansible_collections
